# KitGenBench

./: .pre-commit-config.yaml  CMakeLists.txt  README.md
.github/workflows/: documentation.yaml  examples.yml  install.yml  macos.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
cmake/: CPM.cmake  tools.cmake
documentation/: CMakeLists.txt  conf.py
documentation/pages/: about.dox
examples/: CMakeLists.txt
examples/plain-malloc/: CMakeLists.txt
examples/plain-malloc/source/: main.cpp
examples/simple-mallocMC/: CMakeLists.txt
examples/simple-mallocMC/source/: main.cpp
include/kitgenbench/: DeviceClock.h  kitgenbench.h  setup.h
include/membenchmc/: DeviceClock.h  membenchmc.h  setup.h
source/: kitgenbench.cpp  membenchmc.cpp
standalone/: CMakeLists.txt
standalone/source/: main.cpp
test/: CMakeLists.txt
test/source/: kitgenbench.cpp  membenchmc.cpp
